--- a/index.html
+++ b/index.html
@@ -5,40 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Weather Dashboard</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-  </head>
+    <link rel="stylesheet" href="./assets/css/style.css" />
+</head>
   <body>
 
     <!--title-->
-    <section class="title-section">
-      <h1 class="title">
+    <header class="has-text-centered">
+      <h1 class="wd is-size-2">
         Weather Dashboard
       </h1>
+    </header>
+
+</main>
+    <!--search by city-->
+    <section class="section">
+        <div class="container">
+        <div class="search is-pulled-left">Search for a city:</div>
+            <input type="text" id="name" name="name" required
+            minlength="4" maxlength="8" size="10">    
+            <button type="button" class="button is-info ">Search</button>
+
+            <div class="">
+            <button class="austin is-pulled-left">Austin</button>
+            <button class="chicago is-pulled-left">Chicago</button>
+            <button class="new-york is-pulled-left">New York</button>
+            <button class="las-vegas is-pulled-left">Las Vegas</button>
+        </div>
+        </div>
     </section>
 
-    <!--search by city-->
-    <div>
-        <h2>Search for a city:</h2>
-        <button class="search">
-            Search
-        </button>
-    </div>
-
-    <div>
-        <button class="austin">
-            Austin
-        </button>
-        <button class="chicago">
-            Chicago
-        </button>
-        <button class="new-york">
-            New York
-        </button>
-        <button class="las-vegas">
-            Las Vegas
-        </button>
-    </div>
-
-  <div class="table-container">
+  <div class="table-container is-pulled-right">
     <table class="current-weather">
      Current Weather/Date goes here
     </table>
@@ -50,6 +46,8 @@
      Listing for 5 day forcast
     </table>
   </div>
+</main>?????posible use the car class in each section?
 
-    </body>
+
+</body>
 </html>
