add webapi fetch funct

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
     <div class="container">
         <div class="columns">
             <div class="column is-3">
-                    <div class="search is-pulled-left">Search for a city:</div>
+                    <div class="title-search is-pulled-left">Search for a city:</div>
 
                         <input type="text" id="search" name="search" required
                         minlength="4" maxlength="15" size="10" class="input">    
                         <button type="button" class="button is-info">Search</button>
             
                     </div>
-            <div class="location column is-9">
+            <div class="current-location column is-9" id="current-location">
                 <strong>Location Here (with today date)</strong>
             </div>
         </div>
