current work for display data json

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
                     </div>
             <div class="current-location column is-9" id="current-location">
                 <strong>Location Here (with today date)</strong>
+                <p><span id="page-start" class="page-start"></span></p>
+
             </div>
         </div>
     </div>
@@ -44,7 +46,7 @@
                     <button class="las-vegas" id="las-vegas">Las Vegas</button>
                 </div>
             <div class="column is-div is-9">
-                <div class="five-day row-is-full">
+                <div class="five-day">
                     <strong>5 Day Forcast</strong>
                     
                     <div class="one-after">hello</div>
