--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
                 <div class="five-day">
                     <strong>5 Day Forcast</strong>
                     
-                    <div class="one-after">hello</div>
-                    <div class="two-after">hello</div>
-                    <div class="three-after">hello</div>
-                    <div class="four-after">hello</div>
-                    <div class="five-after">hello</div>
+                    <div class="one-after"></div>
+                    <div class="two-after"></div>
+                    <div class="three-after"></div>
+                    <div class="four-after"></div>
+                    <div class="five-after"></div>
                 </div>
                 </div>
             </div>
