get api info on page

--- a/index.html
+++ b/index.html
@@ -27,11 +27,7 @@
                         <button type="button" class="button is-info">Search</button>
             
                     </div>
-            <div class="current-location column is-9" id="current-location">
-                <strong>Location Here (with today date)</strong>
-                <p><span id="page-start" class="page-start"></span></p>
-
-            </div>
+            <div class="current-location column is-9" id="current-location"></div>
         </div>
     </div>
 </section>
@@ -49,11 +45,6 @@
                 <div class="five-day">
                     <strong>5 Day Forcast</strong>
                     
-                    <div class="one-after"></div>
-                    <div class="two-after"></div>
-                    <div class="three-after"></div>
-                    <div class="four-after"></div>
-                    <div class="five-after"></div>
                 </div>
                 </div>
             </div>
