--- a/index.html
+++ b/index.html
@@ -1,104 +1,66 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <title> Weather Dashboard </title>
-</head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    
+    <body class="w-auto">
+        <header class="bg-info text-center w-auto position-sticky top-0 start-50">
+            <h1 class="w-auto">
+                <a href="./index.html" class="text-decoration-none text-white fw-bolde">Weather Dashboard</a>
+            </h1>
+        </header>
+        
+        <section class="vh-100 container">
+            <div class="row">
 
-<body>
-    <header>
-        <div class="banner d-flex p-2 justify-content-center h1 text-light text-decoration-underline fw-bold">Weather
-            Dashboard</div>
-    </header>
-
-    <main class="container-fluid">
-
-        <div class="row">
-
-            <div class="col-3 bg-light">
-
-                <div class="mb-3" id="search-box">
-                    <label for="citySearch" class="form-label h2 mb-3 ">Search for a city:</label>
-                    <input type="text" class="form-control border border-2 border-dark" id="citySearch"
-                        placeholder="City Name">
+                <div class="bg-primary bg-info bg-opacity-20 col-md-3 col-sm-12 h-auto ">
+                    <!-- <div class="row-sm h-100 w-auto"> -->
+                        <!-- <div class="col-3 w-auto "> -->
+                            <h3 class="w-auto"></h3>
+                            <p></p>
+                            <form class="d-flex flex-column justify-content-center">
+                                <label for="city-finder"></label>
+                                <input type="text" name="city-finder" id="city-finder">
+                                <button type="submit" class="sub-btn " id="sub-btn">Search</button>
+                            </form>
+                            <div class="p-2 d-flex flex-column" id="display-history"></div>
+                        <!-- </div> -->
+                    <!-- </div> -->
                 </div>
-                <p class="error justify-content-center"></p>
-                <button type="submit" class="searchBtn btn btn-primary col-12 mb-3">Search</button>
-                <div class="mb-3 p-2 border-top border-dark border-3" id="previous-searches">
-
+                <div class="bg-secondary bg-opacity-5 bg-gradient col-md-9 col-sm-12 p-2">
+                    <div class="row justify-content-center">
+                    <!-- <div class="vw-auto d-flex flex-column p-1"> -->
+                            <div class="bg-info col-12 p-1 text-center ">
+                                <h3 class="bg-secondary bg-gradien rounded text-white shadow text-center border-bottom border-white" id="display-city-name"></h3>
+                                <img class="border shadow rounded-circle" id="todays-icon">
+                                <p id="display-city" class="shadow-sm p-3 mb-1 bg-body rounded"></p>
+                                <p id=current-temp class=""></p>
+                                <p id="wind" class=""></p>
+                                <p id="humidity" class=""></p>
+                                <p id="uv-index" class=""></p> 
+                            </div>
+                            <!-- <div id="uv-index" class="col-12 w-25 text-white text-center mb-2 border border-bottom-white justify-content-center p-2"></div> -->
+                    </div>
+                    <div class="row">
+                            <div class="col-12 col bg-info mt-3 text-center">
+                                <h3 class="shadow border-bottom border-white bg-secondary bg-gradien rounded text-white">5-day-forcast</h3> 
+                                <div class="row justify-content-center bg-info bg-gradien  p-1 h-auto text text-center" id="weather-blocks"></div>
+                            </div>
+                    </div>
+                            <!-- </div> -->
+                    <!-- </div> -->
                 </div>
-
 
             </div>
-            <div class="col-9 bg-light p-3">
-                <div class="col-12 bg-light weather-info border border-2 border-dark p-3">
-                    <span class="city-name fs-2 text">City Name </span> <img id="city-weather-icon">
-                    <br>
-                    <span class="city-temp fs-4 text">Temperature: </span>
-                    <br>
-                    <span class="city-wind-speed fs-4 text">Wind Speed: </span>
-                    <br>
-                    <span class="city-hum fs-4 text">Humidity: </span>
-                    <br>
-                    <span id="city-uv" class="fs-4 text"> UV Index:
-                        <p id="city-uv-text"></p>
-                    </span>
-                </div>
+        </section>
 
-                <container class="row gap-3 justify-content-center justify-space-between">
-
-                    <span class="forecast h3 mt-3 mb-0">5-day Forecast:</span>
-
-                    <div id="day1" class="daily col-2 border  justify-content left">
-                        <p class="daily-date"></p>
-                        <img class="daily-icon"/>
-                        <p class="daily-temp"></p>
-                        <p class="daily-wind"></p>
-                        <p class="daily-humidity"></p>
-                    </div>
-                    <div id="day2" class="daily col-2 border  justify-content left">
-                        <p class="daily-date"></p>
-                        <img class="daily-icon"/>
-                        <p class="daily-temp"></p>
-                        <p class="daily-wind"></p>
-                        <p class="daily-humidity"></p>
-                    </div>
-                    <div id="day3" class="daily col-2 border  justify-content left">
-                        <p class="daily-date"></p>
-                        <img class="daily-icon" />
-                        <p class="daily-temp"></p>
-                        <p class="daily-wind"></p>
-                        <p class="daily-humidity"></p>
-                    </div>
-                    <div id="day4" class="daily col-2 border justify-content left">
-                        <p class="daily-date"></p>
-                        <img class="daily-icon" />
-                        <p class="daily-temp"></p>
-                        <p class="daily-wind"></p>
-                        <p class="daily-humidity"></p>
-                    </div>
-                    <div id="day5" class="daily col-2 border justify-content left">
-                        <p class="daily-date"></p>
-                        <img class="daily-icon" />
-                        <p class="daily-temp"></p>
-                        <p class="daily-wind"></p>
-                        <p class="daily-humidity"></p>
-                    </div>
-                </container>
-            </div>
-        </div>
-
-    </main>
-
-    <!-- Scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./assets/js/script.js"></script>
 </body>
-
 </html>
